--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "rules": {
         "indent": [
             "error",
-            "tab"
+            "esp"
         ],
         "linebreak-style": [
             "error",
