Create e2e tests with cypress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
     },
     "rules": {
         "indent": [
-            "error",
-            "esp"
+            "error", 2
         ],
         "linebreak-style": [
             "error",
