--- a/package.json
+++ b/package.json
@@ -5,25 +5,21 @@
   "main": "cypress.config.js",
   "scripts": {
     "lint": "eslint cypress/**/*.js && eslint cypress.config.js",
-    "lint:fix": "slint cypress/**/*.js --fix && eslint cypress.config.js --fix",
+    "lint:fix": "eslint cypress/**/*.js --fix && eslint cypress.config.js --fix",
     "cy:open": "cypress open",
     "cy:open:tablet": "cypress open --config viewportWidth=767,viewportHeight=480",
     "test": "cypress run",
-    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js",
-    "test:cloud": "cypress run --record --tag 'desktop'",
-    "test:tablet:cloud": "cypress run --record --tag 'tablet' --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
+    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
   },
   "keywords": [],
   "author": "Fulano de Tall",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
     "@faker-js/faker": "^8.0.2",
     "cypress": "^12.15.0",
     "cypress-iframe": "^1.0.1",
     "cypress-mailosaur": "^2.13.0",
-    "eslint": "8.0",
-    "eslint-plugin-cypress": "^2.13.3",
-    "globals": "^16.5.0"
+    "eslint": "^8.43.0",
+    "eslint-plugin-cypress": "^2.13.3"
   }
 }
